third_party/rust/thiserror/v1/crate/tests/ui/duplicate-enum-source.stderr
error: duplicate #[source] attribute
 --> tests/ui/duplicate-enum-source.rs:8:9
  |
8 |         #[source]
  |         ^^^^^^^^^
